--- a/Web/web-app/.gitignore
+++ b/Web/web-app/.gitignore
@@ -1,23 +1,52 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
 .DS_Store
-node_modules
-/dist
-
-
-# local env files
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Fichiers de configuration contenant des informations sensibles
+.env
+
+# Fichiers et dossiers générés lors de la compilation/build
+/dist
+/build
+
+# Logs et bases de données
+*.log
+*.sql
+*.sqlite
+
+# Fichiers système spécifiques à l'OS
+.DS_Store # pour macOS
+Thumbs.db # pour Windows
+
+# Autres fichiers/dossiers à ignorer
+/.vscode/ # Si vous utilisez Visual Studio Code
+/temp
+/backup
+
+# Fichiers spécifiques à des IDEs ou éditeurs de texte
+.idea/ # pour les produits JetBrains
+*.sublime-workspace
+*.sublime-project
+
+# Fichiers de cache
+.cache
